# VoxEffects

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
config/: attack.yaml  class_map.csv  speech_effect_chain_v2.json
docs/: reproducibility.md
protocols/: protocols.json
protocols/gender/: gender_balanced_test_female_60.csv  gender_balanced_test_male_60.csv  gender_balanced_test_meta.json
protocols/test/: daps_nii_test_sample.csv  ears_test_sample.csv  tsp_test_sample.csv  vctk_test_sample.csv
scripts/: check_reproducibility.py  render_dataset.py
voxeffects/: __init__.py  audio_io.py  dataset.py  effects.py
voxeffects/degradations/: __init__.py  audio_attack.py  compression.py  noise.py  utils.py
